# atc

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
databases/: database_thermo.db  thermo_database.db
docs/: databases.md  thermodynamics.md
images/: logo.rc
libs/qcustomplot/: CMakeLists.txt
libs/qcustomplot-qt6-fixed/: CMakeLists.txt
src/: calculationparameters.cpp  calculationparameters.h  calculationparameters.ui  coreapplication.cpp  coreapplication.h  heavycontainer.cpp  heavycontainer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  periodictable.cpp  periodictable.h  periodictable.ui
src/atc/: database.cpp  database.h  datatypes.cpp  datatypes.h  optimization.cpp  optimization.h  parameters.cpp  parameters.h  thermodynamics.cpp  thermodynamics.h
src/misc/: utilities.cpp  utilities.h
src/models/: amountsmodel.cpp  amountsmodel.h  plottfmodel.cpp  plottfmodel.h  resultmodel.cpp  resultmodel.h  specialdelegates.cpp  specialdelegates.h  substancestable.cpp  substancestable.h  substancestablemodel.cpp  substancestablemodel.h  substancestabulatedtfmodel.cpp  substancestabulatedtfmodel.h  substancestemprangemodel.cpp  substancestemprangemodel.h
src/plots/: dialogchangegraphsettings.cpp  dialogchangegraphsettings.h  dialogchangegraphsettings.ui  dialogchangetext.cpp  dialogchangetext.h  dialogchangetext.ui  plot2dbase.cpp  plot2dbase.h  plot2dgraph.cpp  plot2dgraph.h  plot2dheatmap.cpp  plot2dheatmap.h  plot3dsurface.cpp  plot3dsurface.h  plot3dsurface.ui  plots.cpp  plots.h
src/views/: amountstableview.cpp  amountstableview.h  plottfview.cpp  plottfview.h  resultview.cpp  resultview.h  substancestableview.cpp  substancestableview.h  table.cpp  table.h
